[gd_scene load_steps=2 format=3 uid="uid://t32pxx4ydgmd"]

[ext_resource type="Script" path="res://scripts/UI/Main/Options/general.gd" id="1_vos0s"]

[node name="General" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vos0s")

[node name="Main" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="PlayerName" type="MarginContainer" parent="Main"]
layout_mode = 2
theme_override_constants/margin_right = 100

[node name="HBoxContainer" type="HBoxContainer" parent="Main/PlayerName"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Main/PlayerName/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Nom de joueur :"

[node name="TextEdit" type="LineEdit" parent="Main/PlayerName/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Ploof"

[node name="PlayerColor" type="MarginContainer" parent="Main"]
layout_mode = 2
theme_override_constants/margin_right = 100

[node name="HBoxContainer" type="HBoxContainer" parent="Main/PlayerColor"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Main/PlayerColor/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Couleur de joueur :"

[node name="ColorPicker" type="ColorPickerButton" parent="Main/PlayerColor/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Color"
color = Color(1, 0, 0, 1)
edit_alpha = false

[node name="HBoxContainer" type="HBoxContainer" parent="Main"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Main/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Mode basses performances :"

[node name="LowPerf" type="CheckButton" parent="Main/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Comme pour les PC d'Atilla."
text = "Le jeu changera son fonctionnement interne pour permettre aux PC moins performants une exp√©rience de jeu normal. Si le jeu n'a pas un fonctionnement normal, activez cette option."
autowrap_mode = 3

[connection signal="text_changed" from="Main/PlayerName/HBoxContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="color_changed" from="Main/PlayerColor/HBoxContainer/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="toggled" from="Main/HBoxContainer/LowPerf" to="." method="_on_low_perf_toggled"]
